WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302274
Crash in WebKit: WTF::Detail::CallableWrapper<WebKit::WebExtensionContext::updateDeclarativeNetRequestRulesInStorage
https://bugs.webkit.org/show_bug.cgi?id=302274
Summary
Crash in WebKit: WTF::Detail::CallableWrapper<WebKit::WebExtensionContext::u...
Elijah Sawyers
Reported
2025-11-10 09:59:54 PST
rdar://164266092
Attachments
Add attachment
proposed patch, testcase, etc.
Elijah Sawyers
Comment 1
2025-11-10 10:05:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53690
EWS
Comment 2
2025-11-10 15:19:40 PST
Committed
302816@main
(2c40b8db2d24): <
https://commits.webkit.org/302816@main
> Reviewed commits have been landed. Closing PR #53690 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug