Crash in WebKit:  WTF::Detail::CallableWrapper<WebKit::WebExtensionContext::updateDeclarativeNetRequestRulesInStorage https://bugs.webkit.org/show_bug.cgi?id=302274 rdar://164266092

Reviewed by Timothy Hatcher.

This patch fixes a crash where the savepoint identifier is being accessed without first checking
that it's non-null. To fix this, return an error if we don't have a savepoint identifier.

These changes also include cleanup to use isEmpty rather than length when checking for an error
message.

* Source/WebKit/Shared/Extensions/WebExtensionSQLiteStore.cpp:
(WebKit::WebExtensionSQLiteStore::deleteDatabase):
(WebKit::WebExtensionSQLiteStore::createSavepoint):
* Source/WebKit/UIProcess/Extensions/API/WebExtensionContextAPIDeclarativeNetRequest.cpp:
(WebKit::WebExtensionContext::updateDeclarativeNetRequestRulesInStorage):
(WebKit::WebExtensionContext::declarativeNetRequestGetDynamicRules):
(WebKit::WebExtensionContext::declarativeNetRequestGetSessionRules):

Canonical link: https://commits.webkit.org/302816@main